--- a/strona.html
+++ b/strona.html
@@ -29,7 +29,7 @@
             <h1>Siemaneczko!</h1>
             <p class="imie">Jestem Kacper Kościański</p>
             <h2>&lt;Technik Informatyk&gt;</h2>
-            <p class="opis">Młody początkujący developer, pasionat piłki nożnej należący do lepszej czerwonej strony Londynu i koneser dobrych gier.
+            <p class="opis">Młody początkujący developer, pasjonat piłki nożnej należący do lepszej czerwonej strony Londynu i koneser dobrych gier.
                 Jestem 21 letnim studentem na Wyższej Szkole Ekonomii i Informatyki w Krakowie.
                 Ukończyłem technikum informatyczne zdobywająć certyfikat technika.
                   </p>
